# stock-management

./: .gitignore  LICENSE  authenticator.py  coupon_manager.py  database.py  docker-compose.yml  enumerations.py  main.py  pyproject.toml  requirements.txt
app/: Dockerfile  authenticator.py  database.py  enumerations.py  main.py  requirements.txt
