[tool.poetry]
name = "stock-management"
version = "0.1.0"
description = "This example starts up a stock management API"
authors = ["Lucas Santos <luss1010@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.91.0"
uvicorn = "^0.20.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
